# test-task-flask-mongodb

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test.postman_collection.json
test_task_flask_mongodb/: __init__.py
test_task_flask_mongodb/templates/: index.html
