[tool.poetry]
name = "test-task-flask-mongodb"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_flask_mongodb"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
pymongo = "^4.3.3"
flask-apispec = "^0.11.4"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
